--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">FrameWork</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,320</td><td>Usecase_Managmnet</td><td></td></tr>
+<tr><th colspan="8">API</th></tr>
+<tr><td><a href="#t0">Account Types</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">8,394</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">FrameWork</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.restassured.usermanagment.api.testcases.UseCaseManagmentTest</td><td><a href="#m0">createUsecase</a></td><td rowspan="1">1687502092799</td><td rowspan="1">17261</td></tr><tr class="passedeven"><td><a href="#m1">getAllUseCases</a></td><td rowspan="1">1687502110091</td><td rowspan="1">387</td></tr><tr class="passedeven"><td><a href="#m2">updateUseCase</a></td><td rowspan="1">1687502110488</td><td rowspan="1">1482</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">API</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Account Types &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.restassured.accounttypres.api.AccountTypesTestClass</td><td><a href="#m0">negative_getall_account_types</a></td><td rowspan="1">1688626923358</td><td rowspan="1">344</td></tr><tr><th colspan="4">Account Types &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.restassured.accounttypres.api.AccountTypesTestClass</td><td><a href="#m1">create_and_update_account_type</a></td><td rowspan="1">1688626915390</td><td rowspan="1">4164</td></tr><tr class="passedeven"><td><a href="#m2">create_new_account_type</a></td><td rowspan="1">1688626919569</td><td rowspan="1">2310</td></tr><tr class="passedeven"><td><a href="#m3">get_all_account_types</a></td><td rowspan="1">1688626921888</td><td rowspan="1">749</td></tr><tr class="passedeven"><td><a href="#m4">negative_create_new_account_type</a></td><td rowspan="1">1688626922642</td><td rowspan="1">710</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.restassured.usermanagment.api.testcases.UseCaseManagmentTest#createUsecase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.restassured.usermanagment.api.testcases.UseCaseManagmentTest#getAllUseCases</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.restassured.usermanagment.api.testcases.UseCaseManagmentTest#updateUseCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Account Types</h2><h3 id="m0">com.restassured.accounttypres.api.AccountTypesTestClass#negative_getall_account_types</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The Status code should be 400 expected [400] but found [500]
+	at com.restassured.accounttypres.api.AccountTypesTestClass.negative_getall_account_types(AccountTypesTestClass.java:285)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.restassured.accounttypres.api.AccountTypesTestClass#create_and_update_account_type</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.restassured.accounttypres.api.AccountTypesTestClass#create_new_account_type</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.restassured.accounttypres.api.AccountTypesTestClass#get_all_account_types</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.restassured.accounttypres.api.AccountTypesTestClass#negative_create_new_account_type</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
